# Intimacy-Rust-React-Application

./: readme.md
backend/: Cargo.toml  database_genration.sql
backend/src/: .env  main.rs
backend/src/db/: db.rs
backend/src/models/: mod.rs  response_models.rs  user_models.rs
backend/src/routes/: mod.rs  user.rs
backend/src/utils/: auth.rs
